--- a/Serendipity/pom.xml
+++ b/Serendipity/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.shawn.games</groupId>
   <artifactId>Serendipity</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>Test</version>
 
   <name>Serendipity</name>
   <!-- FIXME change it to the project's website -->
