--- a/Serendipity/pom.xml
+++ b/Serendipity/pom.xml
@@ -14,8 +14,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
   </properties>
   
   <repositories>
@@ -55,10 +55,19 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
+            <configuration>
+                <compilerArgs>
+                    <arg>--add-modules=jdk.incubator.vector</arg>
+                </compilerArgs>
+            </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+   			 <configuration>
+     		   <forkCount>1</forkCount>
+    	       <argLine>--add-modules=jdk.incubator.vector</argLine>
+    		 </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
