--- a/Serendipity/pom.xml
+++ b/Serendipity/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.shawn.games</groupId>
   <artifactId>Serendipity</artifactId>
-  <version>Test</version>
+  <version>${revision}</version>
 
   <name>Serendipity</name>
   <!-- FIXME change it to the project's website -->
@@ -16,9 +16,14 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <revision>Test</revision>
   </properties>
   
   <repositories>
+    <repository>
+      <id>maven-central</id>
+      <url>https://repo1.maven.org/maven2</url>
+    </repository>
     <repository>
       <id>jitpack.io</id>
       <url>https://jitpack.io</url>
