--- a/Serendipity/pom.xml
+++ b/Serendipity/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.shawn.games</groupId>
   <artifactId>Serendipity</artifactId>
-  <version>${revision}</version>
+  <version>0.2-SNAPSHOT</version>
 
   <name>Serendipity</name>
   <!-- FIXME change it to the project's website -->
@@ -121,6 +121,30 @@
 		  </execution>
 		</executions>
 	  </plugin>
+      <plugin>
+          <groupId>com.akathist.maven.plugins.launch4j</groupId>
+          <artifactId>launch4j-maven-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>l4j-clui</id>
+              <phase>package</phase>
+              <goals><goal>launch4j</goal></goals>
+              <configuration>
+                <headerType>console</headerType>
+                <outfile>target/Serendipity.exe</outfile>
+                <jar>target/Serendipity-${revision}.jar</jar>
+                <classPath>
+                  <mainClass>org.shawn.games.Serendipity.UCI</mainClass>
+                  <addDependencies>false</addDependencies>
+                  <preCp>anything</preCp>
+                </classPath>
+                <jre>
+                  <minVersion>17.0</minVersion>
+                </jre>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
     </plugins>
   </build>
 </project>
