--- a/Serendipity/pom.xml
+++ b/Serendipity/pom.xml
@@ -42,6 +42,11 @@
       <artifactId>chesslib</artifactId>
       <version>1.3.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.openjdk.jol</groupId>
+      <artifactId>jol-core</artifactId>
+      <version>0.9</version>
+	</dependency>
   </dependencies>
 
   <build>
