--- a/Serendipity/pom.xml
+++ b/Serendipity/pom.xml
@@ -73,7 +73,7 @@
 			    <manifest>
 				  <addClasspath>true</addClasspath>
 				  <classpathPrefix>lib/</classpathPrefix>
-				  <mainClass>org.shawn.games.Serendipity.UCI</mainClass>
+				  <mainClass>org.shawn.games.Serendipity.UCI.UCI</mainClass>
 				</manifest>
 			  </archive>
 			</configuration>
@@ -114,7 +114,7 @@
 				<transformer
 				implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 			      <mainClass>
-				  org.shawn.games.Serendipity.UCI</mainClass>
+				  org.shawn.games.Serendipity.UCI.UCI</mainClass>
 				</transformer>
 			  </transformers>
 			</configuration>
