--- a/Serendipity/pom.xml
+++ b/Serendipity/pom.xml
@@ -32,15 +32,15 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.17.0</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.github.bhlangonijr</groupId>
-      <artifactId>chesslib</artifactId>
-      <version>1.3.4</version>
     </dependency>
   </dependencies>
 
