--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,15 +11,21 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-          with:
-            persist-credentials: false
+        with:
+          persist-credentials: false
 
       - name: Set up Java
-      - uses: actions/setup-java@v4
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '21'
           cache: maven
+
+      - name: Check Java version
+        run: java -v
+
+      - name: Check Maven version
+        run: mvn -v
 
       - name: Build
         run: make
