--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,18 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
+          ref: ${{ github.event.pull_request.head.sha }}
+
+      - name: Obtain Reference Bench
+        run: |
+          benchref=$(git show -s --format=%B HEAD | tac | grep -m 1 -o -x '[[:space:]]*\b[Bb]ench[ :]\+[1-9][0-9]\{5,7\}\b[[:space:]]*' | sed 's/[^0-9]//g')
+          if [[ -n "$benchref" ]]; then
+            echo "benchref=$benchref" >> $GITHUB_ENV
+            echo "Reference bench: $benchref"
+          else
+            echo "ERROR: No reference bench found"
+            exit 1
+          fi
 
       - name: Set up Java
         uses: actions/setup-java@v4
@@ -28,4 +40,24 @@ jobs:
         run: mvn --version
 
       - name: Build
-        run: make
+        run: make EXE=Serendipity-${{ github.sha }}
+
+      - name: Check Bench
+        run: |
+          obtained=$(eval "./Serendipity-${{ github.sha }} bench 2>&1" | tail -n 1 | awk '{print $1}')
+          if [ "${{ env.benchref }}" != "$obtained" ]; then
+            echo "signature mismatch: reference ${{ env.benchref }} obtained: $obtained."
+            exit 1
+          fi
+          echo "signature OK: $obtained"
+
+      - name: Prepare Packaged JAR For Upload
+        run: mv Serendipity.jar Serendipity-${{github.sha}}.jar
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: Serendipity-${{github.sha}}
+          path: |
+            ./Serendipity-${{ github.sha }}
+            ./Serendipity-${{ github.sha }}.jar
